{
    "name": "InputController",
    "maps": [
        {
            "name": "AimController",
            "id": "299ca766-78dd-4aef-ab8c-86de6ea944dc",
            "actions": [
                {
                    "name": "AimPosition",
                    "type": "Value",
                    "id": "7ec24021-2897-4559-9cf3-d0ccfa6086d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aimimg",
                    "type": "Button",
                    "id": "ab0de5c2-1079-4431-bf48-39f7c389a5d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe24505d-4ac3-4393-b6a9-b7a0c82fbfd1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86fc1cfd-8c28-4338-9d6b-04205b489307",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bed8c9f-228a-4a5f-8edb-519660050d54",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aimimg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd6f3b5b-47e0-4074-9e96-47348319c1ba",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aimimg",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ShootController",
            "id": "beb22e05-bb8a-4e01-89e8-653b325028c0",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "72d866c9-1ff8-4346-9c88-70a33b70ac6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d8543ef-6c82-40e0-99c6-bb6c06d2b2ac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91cf4a67-bebc-4401-8772-68714a6e710c",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}